fix PMD, remove unnecessary warnings and JDocs