@@ -145,12 +145,11 @@ public class BookHandler implements ItemMetaHandler<BookMeta> {
         return checkExistence(authorE, author, string);
     }
 
-    @SuppressWarnings("PMD.InefficientEmptyStringCheck")
     private boolean checkExistence(final Existence existence, @Nullable final String present, @Nullable final String string) {
         return switch (existence) {
             case WHATEVER -> true;
             case REQUIRED -> string != null && string.equals(present);
-            case FORBIDDEN -> string == null || string.trim().isEmpty();
+            case FORBIDDEN -> string == null || string.isBlank();
         };
     }
 
